refactor shopping list