@@ -1,7 +1,11 @@
 package at.ac.tuwien.sepr.groupphase.backend.integrationtest;
 
 import at.ac.tuwien.sepr.groupphase.backend.basetest.TestData;
+import at.ac.tuwien.sepr.groupphase.backend.endpoint.dto.DigitalStorageSearchDto;
+import at.ac.tuwien.sepr.groupphase.backend.endpoint.dto.ItemSearchDto;
 import at.ac.tuwien.sepr.groupphase.backend.endpoint.dto.ShoppingItemDto;
+import at.ac.tuwien.sepr.groupphase.backend.endpoint.dto.ShoppingItemSearchDto;
+import at.ac.tuwien.sepr.groupphase.backend.endpoint.dto.ShoppingListDto;
 import at.ac.tuwien.sepr.groupphase.backend.endpoint.mapper.ItemMapper;
 import at.ac.tuwien.sepr.groupphase.backend.endpoint.mapper.ShoppingListMapper;
 import at.ac.tuwien.sepr.groupphase.backend.entity.ApplicationUser;
@@ -14,6 +18,7 @@ import at.ac.tuwien.sepr.groupphase.backend.exception.ConflictException;
 import at.ac.tuwien.sepr.groupphase.backend.exception.ValidationException;
 import at.ac.tuwien.sepr.groupphase.backend.repository.ShoppingItemRepository;
 import at.ac.tuwien.sepr.groupphase.backend.repository.ShoppingListRepository;
+import at.ac.tuwien.sepr.groupphase.backend.security.AuthService;
 import at.ac.tuwien.sepr.groupphase.backend.service.DigitalStorageService;
 import at.ac.tuwien.sepr.groupphase.backend.service.LabelService;
 import at.ac.tuwien.sepr.groupphase.backend.service.ShoppingListService;
@@ -21,11 +26,13 @@ import at.ac.tuwien.sepr.groupphase.backend.service.UnitService;
 import at.ac.tuwien.sepr.groupphase.backend.service.impl.CustomUserDetailService;
 import at.ac.tuwien.sepr.groupphase.backend.service.impl.ShoppingListServiceImpl;
 import at.ac.tuwien.sepr.groupphase.backend.service.impl.validator.ShoppingItemValidator;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.HttpStatus;
@@ -36,6 +43,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 import java.util.logging.Logger;
 
 import static org.junit.jupiter.api.Assertions.assertAll;
@@ -44,7 +52,10 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.doCallRealMethod;
 import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.doReturn;
+import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
@@ -53,7 +64,7 @@ import static org.mockito.Mockito.when;
 @ActiveProfiles("test")
 public class ShoppingListServiceTest implements TestData {
 
-    @InjectMocks
+    @Autowired
     private ShoppingListServiceImpl shoppingListService; // Replace with the actual service class name
 
     @Mock
@@ -78,25 +89,31 @@ public class ShoppingListServiceTest implements TestData {
     private UnitService unitService;
 
     @Mock
-    private ShoppingListMapper shoppingListMapper;
+    private AuthService authService;
+
+    @Mock
+    private Logger logger;
 
     @Mock
     private ItemMapper itemMapper;
 
     @Mock
-    private Logger logger;
+    private ShoppingListMapper shoppingListMapper;
 
-    /*
     @Test
     public void testCreate() throws AuthenticationException, ValidationException, ConflictException {
+
         String jwt = "mockedJWT";
 
-
         // Mock the necessary method calls
-        //when(shoppingListService.getShoppingLists("", jwt)).thenReturn(new ShoppingList());
         when(customUserDetailService.getUser(jwt)).thenReturn(testUser);
-        when(digitalStorageService.findAll(null, jwt)).thenReturn(Collections.emptyList());
+        when(shoppingListService.getShoppingLists("", jwt)).thenReturn(List.of(new ShoppingList().setId(1L).setName("Default")));
+        when(digitalStorageService.findAll(new DigitalStorageSearchDto(null, null))).thenReturn(Collections.emptyList());
         when(unitService.findAll()).thenReturn(Collections.emptyList());
+
+        // Use doCallRealMethod() to allow the real implementation to be called
+        when(itemMapper.dtoToShopping(any(), anyList())).thenReturn(new ShoppingItem().setShoppingList(new ShoppingList().setId(1L)));
+        ItemMapper itemMapperSpy = spy(ItemMapper.class);
 
         doNothing().when(shoppingItemValidator).validateForCreate(
             eq(validShoppingItemDto),
@@ -106,27 +123,16 @@ public class ShoppingListServiceTest implements TestData {
         );
 
         // Act
-        ShoppingItem result = shoppingListService.create(validShoppingItemDto, jwt);
-
-        verify(customUserDetailService).getUser(jwt);
-        verify(digitalStorageService).findAll(null, jwt);
-        verify(unitService).findAll();
-        verify(shoppingItemValidator).validateForCreate(
-            eq(validShoppingItemDto),
-            anyList(),
-            anyList(),
-            anyList()
-        );
-        verify(shoppingItemRepository).save(any());
+        shoppingListService.create(validShoppingItemDto, jwt);
+        when(authService.getUserFromToken()).thenReturn(testUser);
+        List<ShoppingItem> result = shoppingListService.getItemsById(validShoppingItemDto.shoppingList().id(), new ShoppingItemSearchDto(null, null, null), jwt);
 
         // Assert
         assertAll(
             () -> assertNotNull(result),
-            () -> assertEquals("pear", result.getGeneralName())
+            () -> assertEquals(1, result.size())
         );
     }
-
-     */
 
 
 }
